--- a/CURIO/.gitignore
+++ b/CURIO/.gitignore
@@ -55,6 +55,14 @@ Thumbs.db
 node_modules/
 jspm_packages/
 
+# Node.js
+node_modules/
+npm-debug.log
+yarn-error.log
+.npm
+.pnpm-store/
+
 # Temporary files
 *.swp
 *~
+
